# ys2wl

./: .dockerignore  .gitignore  .policy.yml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  main.py  package-lock.json  pr_body.md  pyproject.toml  run  ys2wl_kubernetes_cronjob.yaml
.github/: dependabot.yaml
.github/workflows/: deleteCache.yml  dockerimage.yml  lint.yaml  test-lint.yaml
.playwright-mcp/: page-2026-06-10T20-06-33-112Z.yml  page-2026-06-10T20-09-36-402Z.yml  page-2026-06-10T20-10-21-807Z.yml  page-2026-06-10T20-14-51-097Z.yml  page-2026-06-10T20-36-09-110Z.yml  page-2026-06-10T20-43-09-800Z.yml  page-2026-06-10T20-44-22-203Z.yml  page-2026-06-10T20-53-30-262Z.yml  page-2026-06-10T21-19-37-650Z.yml  page-2026-06-10T21-38-59-835Z.yml  page-2026-06-10T21-40-45-758Z.yml
archive/: main.py
debug/: add_to_playlist_respons.json  channels_list.json  subscription_activity_list.json  subscriptions_list.json  user_playlist.json  user_playlists_list.json  video.json
k8s/: configmap.yaml  deployer-rbac.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
k8s-bootstrap/: deployer-rbac.yaml  middleware.yaml
kubernetes-manifests/: cronjob.yaml  ys2wl.yaml
src/sortarr/: __main__.py  config.py  metrics.py
src/sortarr/api/: app.py  deps.py  models.py
src/sortarr/core/: auth.py  pipeline.py  pipeline_runner.py  playlist_tracker.py  scheduler.py  youtube.py
src/sortarr/db/: connection.py  migrations.py
src/sortarr/filters/: ignore_list.py  selector_filter.py  title_similarity.py  word_filter.py
src/ys2wl/: __main__.py  config.py  metrics.py
src/ys2wl/api/: app.py  deps.py  models.py
src/ys2wl/core/: auth.py  pipeline.py  pipeline_runner.py  scheduler.py  utils.py  youtube.py
src/ys2wl/db/: connection.py  migrations.py  repository.py
src/ys2wl/filters/: duration_filter.py  ignore_list.py  router.py  selector_filter.py  (+2 more)
tests/: conftest.py  test_api.py  test_auth.py  test_auth_api.py  test_db.py  test_filters.py  test_google_client.py  test_integration.py  test_metrics.py  test_models.py  test_pipeline.py  test_playlist_tracker.py  test_scheduler.py  test_ui.py  test_youtube.py
tests/fixtures/: youtube_v3_discovery.json
ui/: index.html  manifest.json
(+30 files in other folders)
