[project]
name = "ys2wl"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "urllib3>= 2.0.7",
    "configargparse",
    "dateutils",
    "fuzzywuzzy",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "jq",
    "levenshtein",
    "python-dateutil",
    "retrying",
    "tzlocal",
    "python-json-logger>=3.3.0",
]

[project.scripts]
ys2wl="main.py"

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
