[project]
name = "ys2wl"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "urllib3>= 2.6.3",
    "configargparse",
    "dateutils",
    "fuzzywuzzy",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "jq",
    "levenshtein",
    "python-dateutil",
    "retrying",
    "tzlocal",
    "python-json-logger>=4.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "apscheduler>=3.10.0",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
]

[project.scripts]
ys2wl="main.py"

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
