[project]
name = "ys2wl"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "urllib3>= 2.6.3",
    "configargparse",
    "dateutils",
    "fuzzywuzzy",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "jq",
    "levenshtein",
    "python-dateutil",
    "retrying",
    "tzlocal",
    "python-json-logger>=4.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "apscheduler>=3.10.0",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
